[gd_scene load_steps=4 format=3 uid="uid://w2srhsq0e6wx"]

[ext_resource type="Script" uid="uid://dh5ueolgs3in8" path="res://_GUI/MENU/main/main_menu.gd" id="1_ahke7"]

[sub_resource type="SystemFont" id="SystemFont_qy2xc"]
font_names = PackedStringArray("Nirmala UI")

[sub_resource type="StyleBoxLine" id="StyleBoxLine_ldgc7"]
color = Color(1, 1, 1, 1)
thickness = 3

[node name="MainMenu" type="Control" node_paths=PackedStringArray("host_button", "join_button", "name_input")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ahke7")
host_button = NodePath("CenterContainer/VBoxContainer/Host")
join_button = NodePath("CenterContainer/VBoxContainer/Join")
name_input = NodePath("CenterContainer/VBoxContainer/NameInput")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2
theme_override_constants/separation = 16

[node name="Title" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_qy2xc")
theme_override_font_sizes/font_size = 50
text = "Hex Realms"

[node name="HSeparator" type="HSeparator" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxLine_ldgc7")

[node name="Spacer" type="Control" parent="CenterContainer/VBoxContainer"]
layout_mode = 2

[node name="NameInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
placeholder_text = "Display Name"
alignment = 1
max_length = 20
select_all_on_focus = true

[node name="Host" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Host"

[node name="Join" type="Button" parent="CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Join"

[connection signal="text_submitted" from="CenterContainer/VBoxContainer/NameInput" to="." method="_on_name_input_text_submitted"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
